--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Alura HTML e CSS</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
 
-    <header></header>
+    <header>
+
+        <nav class="cabecalho">
+
+            <a href="#">Home</a>
+            <a href="./about.html">Sobre mim</a>
+
+        </nav>
+
+    </header>
 
     <main class="pagina">
 
@@ -31,18 +42,36 @@
 
             <div class="pagina_links">
 
-                <a class="pagina_links_link" href="https://instagram.com/rafaballerini" target="_blank">Instagram</a>
-                <a class="pagina_links_link" href=" https://github.com/guilhermeonrails" target="_blank">GitHub</a>
+                <h2 class="pagina_links_titulo">Acesse minhas redes:</h2>
+
+                <a class="pagina_links_link" href=" https://github.com/guilhermeonrails" target="_blank">
+                    <img class="pagina_links_link_imagens" src="./images/github-icone.png" alt="Logo GitHub">
+                    GitHub
+                </a>
+                <a class="pagina_links_link" href="https://instagram.com/rafaballerini" target="_blank">
+                    <img class="pagina_links_link_imagens" src="./images/linkedin-icone.png" alt="Logo Linkedin">
+                    Linkedin
+                </a>
+                <a class="pagina_links_link" href="https://www.twitch.tv/gaules" target="_blank">
+                    <img class="pagina_links_link_imagens" src="./images/twitch-icone.png" alt="Logo Twitch">
+                    Twitch
+                </a>
 
             </div>
 
         </section>
 
-        <img class="pagina_imagem" src="imagem.png" alt="Mulher programando">
+        <img class="pagina_imagem" src="./images/mulher-computador.png" alt="Mulher programando">
 
     </main>
 
-    <footer></footer>
+    <footer class="rodape">
+
+        <p class="rodape_texto">Desenvolvido por João Pedro</p>
+
+    </footer>
+
+
 </body>
 
 </html>
